Fixed z-index

--- a/src/main/webapp/styles/top-nav.css
+++ b/src/main/webapp/styles/top-nav.css
@@ -17,13 +17,16 @@
 .user-nav {
     background-color: var(--background-accent-darker) !important;
     color: var(--text-light);
-    /*margin-bottom: 1rem;*/
+    padding: 0.25rem 0;
+    z-index: 1049;
+    position: relative;
 }
 
 .top-nav {
     background-color: var(--background-accent) !important;
-    transition: top 0.3s ease-in-out;
-
+    z-index: 1050;
+    position: sticky;
+    top: 0;
 }
 
 .navbar .nav-item.dropdown {
